--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
+    "@web3forms/react": "^1.1.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.5",
     "front-matter": "^4.0.2",
     "marked": "^16.0.0",
@@ -17,7 +20,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sonner": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
